Setup django-csp (#15).

--- a/cruftbot/templates/index.html
+++ b/cruftbot/templates/index.html
@@ -26,5 +26,8 @@
       integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
       crossorigin="anonymous">
     </script>
+    <!--
+      @todo #15 Setup django-node-assets package.
+     -->
   </body>
 </html>
